--- a/doc/interact.tex
+++ b/doc/interact.tex
@@ -968,9 +968,13 @@ illustrating the default build, is:
 
 \beginexample
 gap> ACEVersion();      
+#I  ACE 3.000        Sat Mar  3 19:09:13 2001
+#I  =========================================
+#I  Host information:
+#I    name = hamal
 #I  ACE Version: 3.000
 #I  Executable built:
-#I    Tue Oct 17 10:45:14 EST 2000
+#I    Mon Feb 26 18:50:15 CET 2001
 #I  Level 0 options:
 #I    statistics package = on
 #I    coinc processing messages = on
@@ -1263,7 +1267,8 @@ where we know pretty well what to expect.
 Let $G$ be the group, isomorphic to the symmetric  group  $S_6$,  with
 the presentation
 $$
-\{ a, b \mid a^2, b^6, (ab^{-1}ab)^3, (ab^{-1}ab^2)^4, (ab)^5, (ab^-2ab^2)^2 \}
+\{ a, b \mid a^2, b^6, (ab^{-1}ab)^3, (ab^{-1}ab^2)^4, (ab)^5, 
+             (ab^{-2}ab^2)^2 \}
 $$
 (from  \cite{CM72}),  and  let  $H$  be  the  subgroup  $\langle  ab^3
 \rangle$. There is an isomorphism $\phi$ from $G$ to $S_6$ mapping $a$
