--- a/doc/options.tex
+++ b/doc/options.tex
@@ -51,9 +51,9 @@ System" in the  {\GAP}  Reference  Manual);  to  find  out  about  any
 particular {\ACE} option, simply type: ```?option  <option>''',  where
 <option> is one of the options listed above without any quotes, e.g.
 
-\beginexample
+\begintt
 gap> ?option echo
-\endexample
+\endtt
 
 will display the section in this  manual  that  describes  the  `echo'
 option.
@@ -63,9 +63,9 @@ the options provided. Please spend some time reading  these  sections.
 To continue onto the next section on-line using {\GAP}'s help browser,
 type:
 
-\beginexample
+\begintt
 gap> ?>
-\endexample
+\endtt
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{Passing ACE Options}
